# Zzz

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  ai-agent.html  app.js  auswertung.html  build_spa.py  composer.json  deploy-hetzner-copypaste.sh  deploy-hetzner-simple.sh  deploy-to-hetzner.sh  deploy.sh  deploy_pages.py  docker-compose.yml  fix-turf-esm.sh  index.html  install.sh  phpunit.xml  pyproject.toml  server-setup.sh  ssl-setup.sh  style.css
.github/workflows/: pages.yml  tests.yml
app/Providers/: OfflineModeServiceProvider.php
app/Services/: KbAssistantService.php
asterisk/: extensions.conf  http.conf  med_voicebot.py  queues.conf  rtp.conf  sip.conf
asterisk/agi/: fastagi_server.py
backend/: branchen.py  config.py  database.py  main.py  requirements.txt
config/: app.php  offline.php  services.php
deploy/: deploy-server.sh  ssh-check.sh
docs/: 404.html  acd.html  admin-dashboard.html  aerzte.html  agent-board.html  agenten.html  ai-agent.html  ai-galerie.html  ansagen.html  app.js  asterisk.html  auswertung.html  benutzer.html  callflow.html  dashboard.html  flow-editor.html  guard.html  index.html  patienten.html  portal.html  softphone.html  spa.html  standort.html  standortleitung.html  style.css  teamleiter.html  termine.html  uebersetzung.html  voicebot-live.html  voicebot.html  wartezimmer.html  wissensdatenbank.html
nginx/: default.conf
routes/: api.php
vente-crm/: .env.example  .gitignore  PROJEKT-DOKUMENTATION.md  adressliste_friedrichstr_unter_den_linden.xlsx  docker-compose.yml  start.sh
(+207 files in other folders)
