[project]
name = "zzz"
version = "0.1.0"
description = "Zzz - Python/PHP/JSON Projekt"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/json"]
addopts = "--cov=src/python --cov-report=term-missing"

[tool.coverage.run]
source = ["src/python"]

[tool.coverage.report]
fail_under = 80
show_missing = true
